@@ -31,9 +31,7 @@ http://www.python.org/logo.png
 reading included file u'.*?wrongenc.inc' seems to be wrong, try giving an \
 :encoding: option\\n?
 %(root)s/includes.txt:4: WARNING: download file not readable: .*?nonexisting.png
-(%(root)s/markup.txt:\\d+: WARNING: Malformed :option: u'&option', does \
-not contain option marker - or -- or / or \\+
-%(root)s/undecodable.txt:3: WARNING: undecodable source characters, replacing \
+(%(root)s/undecodable.txt:3: WARNING: undecodable source characters, replacing \
 with "\\?": b?'here: >>>(\\\\|/)xbb<<<'
 )?"""
 
@@ -234,6 +232,23 @@ HTML_XPATH = {
         (".//td[@class='field-body']/ul/li/strong", '^hour$'),
         (".//td[@class='field-body']/ul/li/em", '^DuplicateType$'),
         (".//td[@class='field-body']/ul/li/em", tail_check(r'.* Some parameter')),
+        # others
+        (".//a[@class='reference internal'][@href='#cmdoption-perl-arg-+p']/code/span",
+            'perl'),
+        (".//a[@class='reference internal'][@href='#cmdoption-perl-arg-+p']/code/span",
+            '\+p'),
+        (".//a[@class='reference internal'][@href='#cmdoption-perl-arg-arg']/code/span",
+            'arg'),
+        (".//a[@class='reference internal'][@href='#cmdoption-hg-arg-commit']/code/span",
+            'hg'),
+        (".//a[@class='reference internal'][@href='#cmdoption-hg-arg-commit']/code/span",
+            'commit'),
+        (".//a[@class='reference internal'][@href='#cmdoption-git-commit-p']/code/span",
+            'git'),
+        (".//a[@class='reference internal'][@href='#cmdoption-git-commit-p']/code/span",
+            'commit'),
+        (".//a[@class='reference internal'][@href='#cmdoption-git-commit-p']/code/span",
+            '-p'),
     ],
     'contents.html': [
         (".//meta[@name='hc'][@content='hcval']", ''),
